--- a/client/src/App.css
+++ b/client/src/App.css
@@ -477,3 +477,37 @@ footer .input-group-text{
   color: var(--color-777777);
 }
 /*Contact Page Ends Here */
+
+/* Compare Products Page */
+
+.compare-product-card{
+  padding: 20px 15px;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+}
+.compare-product-card .cross{
+  top: 20px;
+  right: 20px;
+  width: 25px;
+  padding: 3px;
+  cursor: pointer;
+}
+.compare-product-details > *{
+  font-size: 15px;
+  line-height: 22px;
+  color: var(--color-1C1C1B);
+}
+.compare-product-details h5.title{
+  font-weight: 500;
+}
+.compare-product-details h6.price{
+  font-weight: 400;
+}
+.compare-product-card .product-detail{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  border-top: 1px solid var(--color-F5F5F7);
+}
+/* Compare Produts Ends Here */
