--- a/client/src/App.css
+++ b/client/src/App.css
@@ -485,7 +485,8 @@ footer .input-group-text{
   background-color: #FFFFFF;
   border-radius: 10px;
 }
-.compare-product-card .cross{
+.compare-product-card .cross, 
+.wishlist-card .cross{
   top: 20px;
   right: 20px;
   width: 25px;
@@ -508,6 +509,6 @@ footer .input-group-text{
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  border-top: 1px solid var(--color-F5F5F7);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 /* Compare Produts Ends Here */
