--- a/client/src/App.css
+++ b/client/src/App.css
@@ -577,12 +577,21 @@ footer .input-group-text{
 /* Policy Pages End Here */
 
 /* Main Product Page */
+.description-wrapper h4, .reviews-wrapper h3{
+  font-size: 26px;
+  color: var(--color-1C1C1B);
+  margin-bottom: 10px;
+}
+.description-wrapper p{
+  font-size: 14px;
+  color: var(--color-777777);
+}
 .review-inner-wrapper{
   background-color: #FFFFFF;
   padding: 30px;
 }
 .review-head{
-  border-bottom: 1px solid rgba(0,0,0,0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding-bottom: 20px;
 }
 .review-head h4{
@@ -593,9 +602,15 @@ footer .input-group-text{
   font-size: 14px;
   color: var(--color-777777);
 }
+.review-form{
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
 .review-form h4{
   font-size: 16px;
   color: var(--color-777777);
+}
+.review:not(:last-child){
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .review p{
   font-size: 14px;
