--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 800;
+}
 :root{
   --color-131921: #131921;
   --color-3B4149: #3B4149;
@@ -559,11 +562,12 @@ footer .input-group-text{
   font-weight: 400;
   color: var(--color-1C1C1B);
 }
-.auth-card .signup{
+.signup{
   background-color: var(--color-FEBD69);
   color: var(--color-131921);
+  border: none;
 }
-.auth-card .signup:hover{
+.signup:hover{
   background-color: var(--color-131921);
   color: #FFFFFF;
 }
@@ -616,4 +620,105 @@ footer .input-group-text{
   font-size: 14px;
   color: var(--color-777777);
 }
+.main-product-image{
+  padding: 20px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+}
+.main-product-image > div{
+  border: 1px solid rgba(143, 50, 50, 0.25);
+}
+.product-magnified-image-cont{
+  z-index: 2;
+  background-color: #FFFFFF;
+}
+.product-magnified-image{
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+.other-product-images{
+  background-color: #FFFFFF;
+  padding: 20px;
+}
+.other-product-images > div{
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  padding: 20px;
+  width: 48.7%;
+}
+.image-magnify{
+  left: 40px !important;
+  padding: 10px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  z-index: 9999;
+}
+.main-product-details{
+  padding: 30px 20px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+}
+.border-bottom{
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+.main-product-details h3.title{
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--color-1C1C1B);
+}
+.main-product-details p.price{
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.main-product-details a.review-btn, .t-review{
+  color: var(--color-777777);
+  font-size: 13px;
+}
+.product-heading{
+  font-size: 14px;
+  color: var(--color-1C1C1B);
+  margin-bottom: 0;
+  font-weight:600;
+}
+.product-data{
+  font-size: 13px;
+  color: var(--color-777777);
+  margin-bottom: 0;
+}
+.main-product-details a{
+  font-size: 14px;
+  color: var(--color-777777);
+}
 /* Main Product Page Ends Here */
+
+/* Cart Page */
+.card-header, .cart-data{
+  border-bottom: 1px solid #EAEAEA;
+}
+.cart-header h4{
+  font-size: 13px;
+  color: var(--color-777777);
+}
+.cart-col-1{
+  width: 40%;
+}
+.cart-col-1 p{
+  color: var(--color-777777);
+  font-size: 14px;
+}
+.cart-col-2{
+  width: 10%;
+}
+.cart-col-3{
+  width: 15%;
+}
+.cart-col-4{
+  width: 15%;
+}
+.cart-data h5.price{
+  font-size: 14px;
+  color: var(--color-1C1C1B);
+}
+/* Cart Page Ends Here */
