--- a/src/App.css
+++ b/src/App.css
@@ -301,6 +301,7 @@ footer .input-group-text{
 .product-card .product-details h5{
   font-size: 15px;
   color: var(--color-131921);
+  font-weight: 700;
 }
 .product-card .product-details p.price{
   font-size: 16px;
